compiler/kernc_cli/tests/soundness/run-pass/const_generics/disjoint_const_target_impls_are_coherent.rn
// class: const-generic-coherence
// source: impls that differ only in target const arguments are disjoint, not overlapping
// exit: 0

trait Flag {
    fn value() i32;
};

struct Box[N: usize] {};

impl Box[1]: Flag {
    fn value() i32 {
        return 1;
    }
}

impl Box[2]: Flag {
    fn value() i32 {
        return 2;
    }
}

fn main() i32 {
    return Box[2].{}.value() - 2;
}
